# nebula-xi-info

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build.sh  make.sh
.github/workflows/: cmake.yml
cmake/: toolchain-mingw-w64-x86_64.cmake
config/: units_tree_config.json
config_parsers/: info_gpio_parser.h
include/info/: info_base.h  info_gpio.h  info_i2c.h  info_sdram.h  info_spi.h
include/parser/: info_gpio_parser.h  info_i2c_parser.h  info_sdram_parser.h  info_spi_parser.h
include/units_tree/: info_gpio_units_tree.h  info_i2c_units_tree.h  info_sdram_units_tree.h  info_spi_units_tree.h
info/: info_base.h  info_sdram.h  info_spi.h
nebulaxi/info/: info_gpio.h  info_i2c.h  info_sdram.h  info_spi.h
nebulaxi/parser/: info_gpio_parser.h  info_i2c_parser.h  info_sdram_parser.h  info_spi_parser.h
nebulaxi/units_tree/: info_gpio_units_tree.h  info_i2c_units_tree.h  info_sdram_units_tree.h  info_spi_units_tree.h
parsers/: info_i2c_parser.h  info_sdram_parser.h  info_spi_parser.h
tests/: CMakeLists.txt  CMakePresets.json  test_config.json  units_config.json  units_tree_config.json
tests/test_info_gpio/: CMakeLists.txt  test_info_gpio.cpp
tests/test_info_i2c/: CMakeLists.txt  print_info_i2c.h  test_info_i2c.cpp
tests/test_info_sdram/: CMakeLists.txt  test_info_sdram.cpp
tests/test_info_spi/: CMakeLists.txt  test_info_spi.cpp
units_info/: info_i2c.h
units_tree/: info_i2c_units_tree.h  info_sdram_units_tree.h
